--- a/scss/compiled.css
+++ b/scss/compiled.css
@@ -20,20 +20,33 @@ html, body {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  padding-top: 1rem;
-  padding-left: 2rem;
-  padding-right: 2rem; }
-  .header p:first-child {
+  padding-left: 1rem;
+  padding-right: 1rem;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center; }
+  .header div {
+    margin: 0;
+    -webkit-flex-shrink: 1;
+        -ms-flex-negative: 1;
+            flex-shrink: 1; }
+  .header div:first-child {
     -webkit-box-flex: 1;
     -webkit-flex-grow: 1;
         -ms-flex-positive: 1;
-            flex-grow: 1; }
-  .header p:nth-child(2) {
+            flex-grow: 1;
+    -webkit-flex-shrink: 0;
+        -ms-flex-negative: 0;
+            flex-shrink: 0; }
+  .header div:nth-child(2) {
     padding-right: 1rem; }
+  .header img {
+    -webkit-flex-shrink: 2;
+        -ms-flex-negative: 2;
+            flex-shrink: 2;
+    max-width: 100px;
+    padding-top: 0.5rem; }
 
 .photo-list {
   box-sizing: border-box;
@@ -71,4 +84,12 @@ html, body {
     padding-left: 1rem;
     overflow: hidden;
     color: black; }
+
+.loading-text {
+  width: 100%;
+  text-align: center;
+  height: 20%;
+  font-size: 4rem;
+  background-color: #ffdddd;
+  margin: 0; }
 
